--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.5",
-    "nodemon": "^3.1.9",
     "prettier": "^3.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
